fix button alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -23,10 +23,15 @@ html {
     align-items: center;
 }
 
-li div {
+li {
     display: table-cell;
     vertical-align: middle;
     width: 700px;
+    margin: 1em 0;
+}
+
+ul {
+    list-style-type: none;
 }
 
 .wrapper {
@@ -55,7 +60,7 @@ li div {
 
 .cta:hover {
     transition: 0.5s;
-    box-shadow: 10px 10px 0 #FBC638;
+    box-shadow: 10px 10px 0 #7bf542;
 }
 
 .cta span:nth-child(2) {
